Sidebar menu Styling
+ Italics & Smaller font for Section links

--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -100,8 +100,8 @@
                     	  <li><a href="{% url 'notifications:unread' %}" class="skel-layers-ignoreHref"><span>Notifications {% live_notify_badge classes='badge small-notification' %}</span></a></li>
                         <li><br></li>
                     		<li><a href="{% url 'my_homepage' %}#" id="home-link" class="skel-layers-ignoreHref"><span>My Page</span></a></li>
-                    		<li><a href="{% url 'my_homepage' %}#myresources" class="skel-layers-ignoreHref"><span>My Resources -</span></a></li>
-                        <li><a href="{% url 'my_homepage' %}#mypacks" class="skel-layers-ignoreHref"><span>My Packs -</span></a></li>
+                    		<li><a href="{% url 'my_homepage' %}#myresources" class="skel-layers-ignoreHref"><span style="font-size:0.95em"><i>My Resources -</i></span></a></li>
+                        <li><a href="{% url 'my_homepage' %}#mypacks" class="skel-layers-ignoreHref"><span style="font-size:0.95em"><i>My Packs -</i></span></a></li>
                         <li><br></li>
                     		<li><a href="{% url 'profile' %}" class="skel-layers-ignoreHref"><span>Profile</span></a></li>
                         <li><br></li>
