--- a/django_project/templates/treasure/pack.html
+++ b/django_project/templates/treasure/pack.html
@@ -166,6 +166,57 @@
         </p>
     {% endif %}
     </div>
+    
+    <div class="hero-unit" id="forum">
+        <h3>Forum<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></h3>
+        
+        {% if threads %}
+            <div class="row panel-body">
+                <div class="table-responsive" style="margin-left:0px">
+                    <table id="threadTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                        <thead>
+                            <tr>
+                                <th>Thread Name</th>
+                                <th>Type</th>
+                                <th>Posted By</th>
+                                <th>Replies</th>
+                                <th>Last Post</th>
+                                <th>Created At</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        {% for thread in threads %}
+                            {% if thread.restricted <= request.user.teacher.verified %}
+                            <tr>
+                                <td><a href="{% url 'thread' 'pack' pack.id thread.id %}">{{ thread.title }}</a></td>
+                                {% if thread.threadtype == '0' %}
+                                <td>Rating</td>
+                                {% elif thread.threadtype == '1' %}
+                                <td>Question</td>
+                                {% elif thread.threadtype == '2' %}
+                                <td>Discussion</td>
+                                {% else %}
+                                <td>No type!</td>
+                                {% endif %}
+                                <td>{{ thread.author }}</td>
+                                <td>{{ thread.num_posts }}</td>
+                                <td>{{ thread.last_post }}</td>
+                                <td>{{ thread.datetime }}</td>
+                            </tr>
+                            {% endif %}
+                        {% endfor %}
+                        </tbody>
+                     </table>
+                </div>
+            </div> <!-- close panel -->
+
+        {% else %}
+            <h4>No Threads on this board</h4>
+        {% endif %}
+        
+        <a class="btn btn-primary" href="{% url 'board' 'pack' pack.id %}">See all Threads</a>
+        <a class="btn btn-primary pull-right" href="{% url 'new_thread' 'pack' pack.id %}">Create a Thread</a>
+    </div>
         
     {% else %}
         <h4>There are no resources in this pack.</h4>
