--- a/django_project/templates/treasure/forum.html
+++ b/django_project/templates/treasure/forum.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body_block %}
-{% if level_boards or general_boards or resource_boards %}
+{% if level_boards or general_boards or resource_boards or pack_boards %}
 {% else %}<div class="hero-unit"><h4>No Boards in Forum</h4></div>
 {% endif %}
 
@@ -101,7 +101,6 @@
                 <tbody>
                     {% for board in resource_boards %}
                         {% if board.restricted <= request.user.teacher.id %}
-                        {% if board.num_threads > 0 %}
                         <tr>
                             <td><a href="{% url 'board' board.boardtype board.resource.id %}">{{ board.title }}</a></td>
                             <td>{{ board.num_threads }}</td>
@@ -109,6 +108,40 @@
                             <td>{{ board.last_post }}</td>
                         </tr>
                         {% endif %}
+                    {% endfor %}
+                </tbody>
+             </table>
+        </div>
+    </div> <!-- close panel -->
+</div>
+{% endif %}
+
+{% if pack_boards %}
+<div class="hero-unit">
+    {% if main_forum %}<h3><a href="{% url 'forum_type' 'pack' %}">Pack Forum</a></h3>
+    {% else %}<h3>Pack Forum</h3>
+    {% endif %}
+    
+    <div class="row panel-body">
+        <div class="span10 table-responsive" style="margin-left:0px">
+            <table id="packBoardTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                <thead>
+                    <tr>
+                        <th>Board Name</th>
+                        <th>Number of Threads</th>
+                        <th>Last Thread</th>
+                        <th>Last Post</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for board in pack_boards %}
+                        {% if board.restricted <= request.user.teacher.id %}
+                        <tr>
+                            <td><a href="{% url 'board' board.boardtype board.pack.id %}">{{ board.title }}</a></td>
+                            <td>{{ board.num_threads }}</td>
+                            <td>{{ board.last_thread }}</td>
+                            <td>{{ board.last_post }}</td>
+                        </tr>
                         {% endif %}
                     {% endfor %}
                 </tbody>
