--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -48,7 +48,7 @@
                                 <li><a href="{% url 'logout' %}">Logout</a></li>
                             {% else %}
                             	<li><a href="{% url 'login' %}">Login</a></li>
-                              <li><a href="{% url 'register' %}">Register</a></li>
+                              <li><a href="{% url 'registration_register' %}">Register</a></li>
                               <li><a href="{% url 'home' %}auth/login/google-oauth2">Login with Google</a></li>
                             {% endif %}
                        </ul>
@@ -115,7 +115,7 @@
       							{% else %}
       							    <li><br></li>
                         <li><a href="{% url 'login' %}" class="skel-layers-ignoreHref"><span>Login</span></a></li>
-                        <li><a href="{% url 'register' %}" class="skel-layers-ignoreHref"><span>Register</span></a></li>
+                        <li><a href="{% url 'registration_register' %}" class="skel-layers-ignoreHref"><span>Register</span></a></li>
                         <li><a href="{% url 'home' %}auth/login/google-oauth2"><span>Login with Google</span></a></li>
       							{% endif %}
       							</ul>
