--- a/django_project/templates/registration/registration_form.html
+++ b/django_project/templates/registration/registration_form.html
@@ -11,7 +11,7 @@
 
 <div class="hero-unit">
 
-        <h2>Teacher Registration</h2>
+        <h2>User Registration</h2>
         <br/>
         <div class="container">
         <form class="span6" id="register_teacher_form" method="post" action="{% url 'registration_register' %}">
