--- a/django_project/templates/treasure/register.html
+++ b/django_project/templates/treasure/register.html
@@ -11,6 +11,7 @@
 
 <div class="hero-unit">
         <h2>Teacher Registration</h2>
+        <h5>Before using the site, please register with your details.</h5>
         <br/>
         <div class="container">
             <form class="span6" id="register_teacher_form" method="post" action="{% url 'register' %}">
