Revert "Merge branch 'registration'"
This reverts commit 51ed52554a6556f01317fed0f784bdc3d5577298, reversing
changes made to dd4f8ac620e3574595cea99b31ef250f9a163f03.

--- a/django_project/templates/registration/password_reset_done.html
+++ b/django_project/templates/registration/password_reset_done.html
@@ -7,6 +7,6 @@
 {% block body_block %}
     <div class="hero-unit">
         <h2>Password Successfully Reset</h2>
-        <p>We have emailed instructions to the address provided on how to reset your password.</p>
+        <p>We have emailed instructions to the addresss provided on how to reset your password.</p>
     </div>
 {% endblock %}
