--- a/django_project/templates/treasure/login.html
+++ b/django_project/templates/treasure/login.html
@@ -13,7 +13,7 @@
             {% if bad_details %}
                 <p class="errorlist">Your username and/or password were incorrect!  Please try again.</p>
             {% elif disabled_account %}
-                <p class="errorlist">Your account is not yet verified; we can't log you in!  Please go to the activation url that was sent to the email address that you provided.</p>
+                <p class="errorlist">Your account is currently disabled; we can't log you in!</p>
             {% endif %}
     
             Username: <input type="text" class="input-block-level" placeholder="Username" name="username" value="" size="50" tabindex='1' autofocus='autofocus'/>
