--- a/django_project/templates/treasure/tags.html
+++ b/django_project/templates/treasure/tags.html
@@ -10,8 +10,7 @@
 <div class="hero-unit">
     <div class="container">
                 
-        <h2>Tags</h2>
-        <a class="btn btn-primary" href="{% url 'add_tag' %}">Add New Tag</a>
+        <h3>Tags</h3><a class="btn btn-primary" href="{% url 'add_tag' %}">Add New Tag<span class="icon-plus-sign"/></a>
         
         <div class="span11"><hr></div>
         
