--- a/django_project/templates/treasure/packs.html
+++ b/django_project/templates/treasure/packs.html
@@ -13,7 +13,7 @@
     <div class="row panel-heading clearfix">
         <h3>Packs</h3>
     </div>
-    <div class="span4"><a class="btn btn-block btn-primary" href="{% url 'newpack' %}">Add Pack</a></div>
+    <a class="btn btn-sml btn-primary pull-right" href="{% url 'newpack' %}">Add Pack<span class="icon-plus-sign"/></a>
     <br/>
     <hr>
 
@@ -57,7 +57,7 @@
             {{ field }}<br/>
         {% endfor %}
 
-        <button class="btn btn-primary" type="submit" name="submit">Search</button>
+        <button class="btn btn-primary" type="submit" name="submit">Search<span class="icon-search"/></button>
     </form>
 </div>
 
