--- a/django_project/templates/treasure/resources.html
+++ b/django_project/templates/treasure/resources.html
@@ -12,9 +12,8 @@
     <div class="row panel-heading clearfix">
         <h3>Resources<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></h3>
     </div>
-    <div class="span2"><a class="btn btn-block btn-primary" href="{% url 'add_file_resource' %}">Add File Resource</a></div>
-    <div class="span1"></div>
-    <div class="span2"><a class="btn btn-block btn-primary" href="{% url 'add_web_resource' %}">Add Web Resource</a></div>
+    <a class="btn btn-primary pull-right" href="{% url 'add_file_resource' %}">Add File Resource<span class="icon-plus-sign"/></a>
+    <a class="btn btn-primary pull-right" href="{% url 'add_web_resource' %}">Add Web Resource<span class="icon-plus-sign"/></a>
     <br/>
     <hr>
         
@@ -57,7 +56,7 @@
             {{ field }}<br/>
         {% endfor %}
 
-        <button class="btn btn-primary" type="submit" name="submit">Search</button>
+        <button class="btn btn-primary" type="submit" name="submit">Search<span class="icon-search"/></button>
     </form>
 </div>
 
