--- a/django_project/templates/treasure/user_home.html
+++ b/django_project/templates/treasure/user_home.html
@@ -28,7 +28,7 @@
 <div id="myresources" class="hero-unit panel panel-default">
 {% if MyResources %}
     <div class="panel-heading clearfix">
-        <h4>My Created Resources<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
+        <h4><u>My Created Resources</u><img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
     </div>
     <div class="panel-body">
         <div class="table-responsive">
@@ -41,7 +41,7 @@
                 </thead>
                 <tbody>
                 {% for resource in MyResources %}
-                    <tr class="studentLabel">
+                    <tr>
                         <td><a href="{% url 'resource_view' resource.id %}">{{ resource.name }}</a></td>
                         <td>{{ resource.summary }}</td>
                     </tr>
@@ -54,15 +54,15 @@
     <p>You have uploaded no resources.</p>
 {% endif %}
     <hr>
-    <div class="span4"><a class="btn btn-block btn-primary" href="{% url 'add_file_resource' %}">Add File Resource</a><br></div>
-    <div class="span4"><a class="btn btn-block btn-primary" href="{% url 'add_web_resource' %}">Add Web Resource</a><br></div>
+    <a class="btn btn-primary pull-right" href="{% url 'add_file_resource' %}">Add File Resource<span class="icon-plus-sign"/></a>
+    <a class="btn btn-primary pull-right" href="{% url 'add_web_resource' %}">Add Web Resource<span class="icon-plus-sign"/></a>
 </div> <!-- close panel -->
 
 
 <div id="mypacks" class="hero-unit panel panel-default">
 {% if MyPacks %}
     <div class="panel-heading clearfix">
-        <h4>My Curated Packs<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
+        <h4><u>My Curated Packs</u><img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
     </div>
     <div class="panel-body">
         <div class="table-responsive">
@@ -88,14 +88,14 @@
     <p>You have created no packs.</p>
 {% endif %}
     <hr>
-    <div class="span4"><a class="btn btn-block btn-primary" href="{% url 'newpack' %}">Create New Pack</a><br></div>
+    <a class="btn btn-primary pull-right" href="{% url 'newpack' %}">Create New Pack<span class="icon-plus-sign"/></a>
 </div> <!-- close panel -->
 
 
 <div id="myratings" class="hero-unit panel panel-default">
 {% if iDownload %}
     <div class="panel-heading clearfix">
-        <h4>My Downloads<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
+        <h4><u>My Downloads</u><img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
     </div>
     <div class="panel-body">
         <div class="table-responsive">
@@ -105,16 +105,16 @@
                         <th>Resource Name</th>
                         <th>Date and Time</th>
                         <th>Have used it?</th>
-                        <th>Have rated it?</th>
+                        <th>Feedback Left?</th>
                     </tr>
                 </thead>
                 <tbody>
                 {% for entry in need2rate %}
-                    <tr class="studentLabel">
+                    <tr>
                         <td><a href="{% url 'resource_view' entry.resource.id %}">{{entry.resource.name}}</a></td>
                         <td>{{entry.datetime}}</td>
-                        <td>{% if entry.used %} Yes{% else %} No. <a href="{% url 'use' entry.resource.id 'home' %}"> Yes?</a>{% endif %}</td>
-                        <td>{% if entry.rated %} Yes{% else %} No. <a href="{% url 'rate' entry.resource.id %}">Rate it</a>{% endif %}</td>
+                        <td>{% if entry.used %} Yes{% else %} No <a class="pull-right btn btn-sml btn-success" href="{% url 'use' entry.resource.id 'home' %}">Yes<span class="icon-ok-sign"/></a>{% endif %}</td>
+                        <td>{% if entry.rated %} Yes{% else %} No <a class="pull-right btn btn-sml btn-primary"href="{% url 'rate' entry.resource.id %}">Leave<span class="icon-pencil"/></a>{% endif %}</td>
                     </tr>
                 {% endfor %}
                 </tbody>
@@ -130,24 +130,24 @@
 <div id="mytalk" class="hero-unit panel panel-default">
     {% if want2talkMine %}
     <div class="panel-heading clearfix">
-        <h4>People Willing to talk about my Resources<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
+        <h4><u>People Interested in discussing about my Resources</u><img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
     </div>
         <div class="panel-body">
             <div class="table-responsive">
-                <table id="Ratings" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                <table id="want2talkMine" class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <thead>
                         <tr>
                             <th>Resource Name</th>
-                            <th>Author</th>
-                            <th>summary</th>
+                            <th>Teacher</th>
+                            <th>Email</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for record in want2talkMine %}
-                            <tr class="studentLabel">
+                            <tr>
                                 <td><a href="{% url 'resource_view' record.resource.id %}">{{record.resource.name}}</a></td>
                                 <td>{{record.teacher}}</td>
-                                <td>{{record.comment}}</td>
+                                <td><a class="btn btn-block" href="mailto:{{record.teacher.user.email}}"></a><span class="icon-envelope"/></td>
                             </tr>
                         {% endfor %}
                     </tbody>
@@ -163,7 +163,7 @@
 <div id="mytalk" class="hero-unit panel panel-default">
     {% if want2talk %}
     <div class="panel-heading clearfix">
-        <h4>Resources I am happy to talk about<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
+        <h4><u>Resources I am happy to talk about</u><img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
     </div>
         <div class="panel-body">
             <div class="table-responsive">
@@ -177,8 +177,8 @@
                     </thead>
                     <tbody>
                         {% for record in want2talk %}
-                            <tr class="studentLabel">
-                                <td><a href="{% url 'resource_view' record.resource.id %}">{{ record.resource.name }}</a>. <a href="{% url 'talk' record.resource.id 'no' 'random' %}">Remove</a></td>
+                            <tr>
+                                <td><a href="{% url 'resource_view' record.resource.id %}">{{ record.resource.name }}</a>. <a class="pull-right btn btn-sml btn-danger" href="{% url 'talk' record.resource.id 'no' 'random' %}">Remove<span class="icon-remove-sign"/></a></td>
                                 <td>{{ record.resource.author }}</td>
                                 <td>{% ifequal record.disable 0 %}Active{% else%}Inactive{% endifequal%}</td>
                             </tr>
@@ -187,6 +187,7 @@
                  </table>
             </div>
         </div> <!-- close body -->
+        <hr>
         <a class="btn btn-primary pull-right" href="{% url 'talk_hide' 'no' %}">Deactivate All</a>
         <a class="btn btn-primary pull-right" href="{% url 'talk_hide' 'yes' %}">Activate All</a>
     {% else %}
@@ -198,7 +199,7 @@
 <div id="mytalk" class="hero-unit panel panel-default">
     {% if want2talkMyPacks %}
     <div class="panel-heading clearfix">
-        <h4>People Willing to talk about my Packs<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
+        <h4><u>People Willing to talk about my Packs</u><img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
     </div>
         <div class="panel-body">
             <div class="table-responsive">
@@ -212,7 +213,7 @@
                     </thead>
                     <tbody>
                         {% for record in want2talkMine %}
-                            <tr class="studentLabel">
+                            <tr>
                                 <td><a href="{% url 'resource_view' record.resource.id %}">{{record.pack.name}}</a></td>
                                 <td>{{record.teacher}}</td>
                                 <td>{{record.comment}}</td>
@@ -231,11 +232,11 @@
 <div id="mytalk" class="hero-unit panel panel-default">
     {% if want2talkPack %}
     <div class="panel-heading clearfix">
-        <h4>Packs I am happy to talk about<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
+        <h4><u>Packs I am happy to talk about</u><img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
     </div>
         <div class="panel-body">
             <div class="table-responsive">
-                <table id="Happy2Talk" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                <table id="Happy2TalkPack" class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <thead>
                         <tr>
                             <th>Pack Name</th>
@@ -245,8 +246,8 @@
                     </thead>
                     <tbody>
                         {% for record in want2talkPack %}
-                            <tr class="studentLabel">
-                                <td><a href="{% url 'pack' record.pack.id %}">{{ record.pack.name }}</a>. <a href="{% url 'talkPack' record.pack.id 'no' %}">Remove</a></td>
+                            <tr>
+                                <td><a href="{% url 'pack' record.pack.id %}">{{ record.pack.name }}</a>.  <a class="pull-right btn btn-sml btn-danger" href="{% url 'talkPack' record.pack.id 'no' %}">Remove<span class="icon-remove-sign"/></a></td>
                                 <td>{{ record.pack.author }}</td>
                                 <td>{% ifequal record.disable 0 %}Active{% else%}Inactive{% endifequal%}</td>
                             </tr>
@@ -255,6 +256,7 @@
                  </table>
             </div>
         </div> <!-- close body -->
+        <hr>
         <a class="btn btn-primary pull-right" href="{% url 'talk_hide_pack' 'no' %}">Deactivate All</a>
         <a class="btn btn-primary pull-right" href="{% url 'talk_hide_pack' 'yes' %}">Activate All</a>
     {% else %}
@@ -271,7 +273,16 @@ $(document).ready(function(){
     $('#Packs').DataTable();
 });
 $(document).ready(function(){
+    $('#want2talkMine').DataTable();
+});
+$(document).ready(function(){
     $('#Downloads').DataTable();
+});
+$(document).ready(function(){
+    $('#Happy2Talk').DataTable();
+});
+$(document).ready(function(){
+    $('#Happy2TalkPack').DataTable();
 });
 </script>
 
